feat: enhance popup header layout with icon and improved styling

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,8 +11,13 @@
 <body>
   <div class="popup-container">
     <header class="popup-header">
-      <h1>solved.tags</h1>
-      <p class="popup-subtitle">메타 태그 통계 뷰어</p>
+      <div class="header-content">
+        <div class="header-text">
+          <h1>solved.tags</h1>
+          <p class="popup-subtitle">메타 태그 통계 뷰어</p>
+        </div>
+        <img src="icons/icon128_white.png" alt="solved.tags" class="header-icon">
+      </div>
     </header>
 
     <main class="popup-content">
